# GIFTs-RUST

./: 404.html  Dockerfile.demo  Dockerfile.gifts  Dockerfile.validation  Makefile  README.md  conftest.py  docker-compose.yml  index.html  pyproject.toml  setup.py  sitemap.xml
.cursor/rules/: gifts-demo-daemon.mdc  gifts-encoders.mdc  gifts-project-context.mdc  gifts-validation.mdc
.github/workflows/: docker-smoke.yml  docs.yml  e2e.yml  lint.yml  perf.yml  test-demo.yml  test-gifts.yml  test-validation.yml
architecture/demo-modules/: index.html
architecture/dependency-graphs/: index.html
architecture/gifts-modules/: index.html
architecture/gifts-products/: index.html
architecture/metar-pipeline/: index.html
architecture/overview/: index.html
architecture/validation-modules/: index.html
assets/css/: styles.a93183ae.css
assets/js/: 0b1ac180.0ad75eb2.js  1031.b1371af1.js  11b9cd8d.646ce66f.js  165.d8f11073.js  1679.9941a52e.js  17896441.71e55d78.js  2038.ef672f5a.js  2130.8e5c266e.js  2237.a032ba89.js  2279.88eac148.js  2334.2a11f812.js  2588.24b75447.js  2850.cde0fd97.js  3201.2442bcca.js  334a1d29.e730e16b.js  3624.e9429798.js  401a4ed1.f5eaf7e9.js  4070.ff2b472b.js  4293.d1692b06.js  4377.c619d916.js  4736.6fbda0df.js  4d54d076.c03de440.js  4e0374af.01e89072.js  504.3da6d546.js  5187.6e6e3dcf.js  52133774.e4a6baf8.js  5359.03af5125.js  5378.9d5457be.js  5447.87bae98b.js  5518.68e18039.js  56f4d702.23dde875.js  5717a078.e068fdd9.js  5734.e6fca934.js  5895.3b92d1d9.js  5944.96d7b724.js  5982.d62a55be.js  5e23ce3f.b26728a1.js  5e95c892.ffa87327.js  60700192.0db9087a.js  6235.ff0a59c2.js  (+42 more)
contributing/: index.html
demo/: demo1.py  iwxxmd.py
demo/tests/: test_demo1_paths.py  test_demo1_unit.py  test_iwxxmd.py  test_iwxxmd_coverage.py  test_iwxxmd_main_errors.py
docs-site/: README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs-site/docs/: contributing.md  index.md  trd.md  use-cases.md
gifts/: METAR.py  SWA.py  TAF.py  TCA.py  VAA.py  __init__.py  metarDecoder.py  metarEncoder.py  skyfield_support.py  swaDecoder.py  swaEncoder.py  tafDecoder.py  tafEncoder.py  tcaDecoder.py  tcaEncoder.py  vaaDecoder.py  vaaEncoder.py
gifts/common/: Common.py  Encoder.py  bulletin.py  tpg.py  (+2 more)
scripts/: annotate_coverage_misses.py  docs-with-npm.sh
testdata/: README.md
tests/: README.md  __init__.py
tools/: freeze_pipeline_cases.py
trd/: index.html
use-cases/: index.html
validation/: checkGMLReferences.py  codeListsToSchematron.py  iwxxmValidator.py
(+96 files in other folders)
